Make sure styles still look good and work well on mobile

--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -35,3 +35,11 @@
     border: $thin-border-size solid $stroke-focused-color;
   }
 }
+
+.labelMobile {
+  composes: u-textSize15 from '../../styles/utils.scss';
+}
+
+.labelLandscape {
+  composes: u-textSizeSml from '../../styles/utils.scss';
+}
