--- a/src/component/field/DropdownMenu.sass
+++ b/src/component/field/DropdownMenu.sass
@@ -13,3 +13,8 @@
     display: none;
   }
 }
+
+.fieldMobile {
+  composes: u-textSize15 from '../../styles/utils.scss';
+  top: #{38/$font-size}rem;
+}
