--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -35,3 +35,7 @@
   margin-top: #{1/$font-size}rem;
   margin-right: #{8/$font-size}rem;
 }
+
+.arrowMobile {
+  margin-top: #{4/$font-size}rem;
+}
